# ball_segmentation

./: .gitignore  README.md  pyproject.toml
annotation/: README.md  build_2k_six_class_annotation_candidates.py  normalize_candidate_paths.py
annotation/candidates/: a8638_double_ball_candidates.csv  a8638_double_ball_candidates.json  a8638_split36_area_mid_candidates.csv  a8638_split36_area_mid_candidates.json  ball2k_six_class_candidates.csv  ball2k_six_class_candidates.json  ball2k_six_class_candidates_v3_pred_legacy.json
annotation/labels/: a8638_double_ball_manual_labels_v2.csv  a8638_split36_area_mid_manual_labels.csv  ball2k_six_class_manual_labels.csv
annotation/viewers/: a8638_result_viewer.html  ball2k_result_viewer.html  ball2k_six_class_annotation_helper.html  new_membrane_result_viewer.html
docs/: method_history.md  reproduction.md  resources.md
examples/: README.md
examples/cnn_v41/: ball2k_result_viewer.html
methods/01_sam_generation/: README.md
methods/02_area_shape_filter/: README.md
methods/03_seed_heuristic/: README.md
methods/04_learned_seed/: README.md  filter_sam_masks_by_learned_seed_arc_shape.py  filter_sam_masks_by_learned_standard_seeds.py
methods/05_cnn_v3/: README.md  apply_cnn_prototype_classifier.py  export_combined_manual_cnn_dataset_upscaled_fast.py  (+2 more)
scripts/: README.md  batch_apply_v3_scale_normalized.py  batch_process_cnn_v3_upscaled_dynamic.py  batch_process_new_membrane_cnn_v3_upscaled.py
tools/: filter_sam_masks_by_area.py  filter_sam_masks_by_ball_seeds.py  run_sam_automatic_mask.py
(+9 files in other folders)
