[project]
name = "ball-segmentation"
version = "0.1.0"
description = "SAM-based ball segmentation methods from heuristic filters to scale-aware CNN classifiers"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.24",
  "Pillow>=9.5",
  "torch>=2.0",
  "transformers>=4.40",
]
